[project]
name = "Shengji"
version = "0.0.1"
description = "A card game."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Zibing Zhang", email = "zibing.zha@gmail.com" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "black==22.10.0",
    "flake8==5.0.4",
    "isort==5.10.1",
    "pyproject-flake8==5.0.4",
    "pytest==7.2.0",
]

[tool.flake8]
extend-ignore = "E203"
max-line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
  "."
]
